# fillet

./: AUTHORS  Cargo.toml  LICENSE-ISC  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: fillet_bench.rs
src/: lib.rs
